
- Bug #1389051, 1092502: fix excessively large memory allocations when
  calling .read() on a socket object wrapped with makefile(). 

- Bug #1433694: minidom's .normalize() failed to set .nextSibling for
  last child element.


Extension Modules
-----------------

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

Tests
-----

- Patch #2232: os.tmpfile might fail on Windows if the user has no
  permission to create files in the root directory.


Documentation
-------------

Build
-----

Windows
-------


What's New in Python 2.5.2?
===========================

*Release date: 21-Feb-2008*

Extension Modules
-----------------

- Fix deallocation of array objects when allocation ran out of memory.
  Remove array test case that was incorrect on 64-bit systems.

- Bug #2137: Remove test_struct.test_crasher, which was meaningful
  only on 32-bit systems.


What's New in Python 2.5.2c1?
=============================

*Release date: 14-Feb-2008*

Core and builtins
-----------------

- Added checks for integer overflows, contributed by Google. Some are
  only available if asserts are left in the code, in cases where they
  can't be triggered from Python code.

- Issue #2045: Fix an infinite recursion triggered when printing a subclass of
  collections.defaultdict, if its default_factory is set to a bound method.

- Issue #1920: "while 0" statements were completely removed by the compiler,
  even in the presence of an "else" clause, which is supposed to be run when 
  the condition is false. Now the compiler correctly emits bytecode for the
  "else" suite.

- A few crashers fixed: weakref_in_del.py (issue #1377858);
  loosing_dict_ref.py (issue #1303614, test67.py);
  borrowed_ref_[34].py (not in tracker).

- Fix for #1303614 and #1174712 backported from the trunk:
  __dict__ descriptor abuse for subclasses of built-in types;
  subclassing from both ModuleType and another built-in types.
